SW minor details update; AMEN added details to template

--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -1694,7 +1694,7 @@ details:after {
   background-size: contain;
   content: "";
   transform: rotate(0);
-  transition: transform 0.325s ease 0s;
+  transition: transform 0.25s ease 0s;
 }
 details summary {
   overflow: hidden;
@@ -2211,4 +2211,34 @@ code {
 
 table {
   margin: 0;
+}
+
+details {
+  min-height: auto;
+  margin: var(--spacing--8) 0 0;
+  padding: 0;
+  border: none;
+}
+details:after {
+  top: 0;
+  right: 0;
+}
+details summary {
+  line-height: var(--spacing--24);
+  color: var(--color--action-light);
+  cursor: pointer;
+  transition: color 0.25s ease 0s;
+}
+details summary:hover, details summary:focus {
+  color: var(--color--action-light-hover);
+}
+details ul li {
+  padding: var(--spacing--8) 0 0;
+}
+
+html.dark details summary {
+  color: var(--color--action-dark);
+}
+html.dark details summary:hover, html.dark details summary:focus {
+  color: var(--color--action-dark-hover);
 }
