--- a/projects/amen/views/integrations/mapping/template/index-r3.html
+++ b/projects/amen/views/integrations/mapping/template/index-r3.html
@@ -151,21 +151,8 @@ NTE|6||mechanical heart valves.|</pre>
             <input type="search" id="search-entities" name="search-entities" placeholder="Search entities">
           </fieldset>
         </form>
-        <details>
-          <summary>Patient</summary>
-          <ul>
-            <li><a href="">Patient ID</a></li>
-            <li><a href="">MRN</a></li>
-            <li><a href="">First Name</a></li>
-            <li><a href="">Last Name</a></li>
-            <li><a href="">Date of Birth</a></li>
-            <li><a href="">Gender</a></li>
-            <li><a href="">Patient Class</a></li>
-            <li><a href="">Attending Physician</a></li>
-          </ul>
-        </details>
         <ul class="entity-options">
-          <li style="display: none;"><a href="">Patient</a></li>
+          <li><a href="">Patient</a></li>
           <li><a href="">Provider</a></li>
           <li><a href="">Caregiver</a></li>
           <li><a href="">Caregiver Assignment</a></li>
