--- a/projects/amen/style/_scss/_details.scss
+++ b/projects/amen/style/_scss/_details.scss
@@ -8,10 +8,13 @@ details {
   &:after {
     top: 0;
     right: 0;
+    width: $spacing-16;
+    height: $spacing-16;
   }
 
   summary {
-    line-height: $spacing-24;
+    padding: 0 $spacing-24 0 0;
+    line-height: $spacing-16;
     color: $color--action-light;
     cursor: pointer;
     @include transition(color, 0.25s, ease);
@@ -23,11 +26,19 @@ details {
   }
 
   ul {
+    max-height: 0;
+    @include transition(max-height, 0.5s, ease);
+
     li {
       padding: $spacing-8 0 0;
     }
   }
+}
 
+details[open] {
+  ul {
+    max-height: 100vh;
+  }
 }
 
 
