AMEN protocol setup updates
Basic form setup

--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -72,6 +72,8 @@ html.dark body {
 }
 
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -95,6 +97,10 @@ a {
   font-weight: 700;
   text-decoration: none;
   color: var(--color--action-light);
+  -webkit-transition: color 0.25s ease 0s;
+  -moz-transition: color 0.25s ease 0s;
+  -ms-transition: color 0.25s ease 0s;
+  -o-transition: color 0.25s ease 0s;
   transition: color 0.25s ease 0s;
 }
 a:hover, a:focus {
@@ -326,6 +332,10 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -424,6 +434,10 @@ input:placeholder {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -490,6 +504,10 @@ input[type=checkbox] + label:before {
   border-radius: var(--border-radius-xs);
   background-color: transparent;
   content: "";
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 input[type=checkbox] + label:after {
@@ -502,6 +520,10 @@ input[type=checkbox] + label:after {
   background-image: url(../assets/icons/ui/check.svg);
   background-size: contain;
   content: none;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -553,6 +575,10 @@ fieldset.radio input[type=radio] + label:before {
   border-radius: 100%;
   background-color: transparent;
   content: "";
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 fieldset.radio input[type=radio] + label:after {
@@ -566,6 +592,10 @@ fieldset.radio input[type=radio] + label:after {
   background-color: var(--color--bg-dark);
   opacity: 0;
   content: "";
+  -webkit-transition: opacity 0.25s ease 0s;
+  -moz-transition: opacity 0.25s ease 0s;
+  -ms-transition: opacity 0.25s ease 0s;
+  -o-transition: opacity 0.25s ease 0s;
   transition: opacity 0.25s ease 0s;
 }
 fieldset.radio input[type=radio]:checked + label:before {
@@ -630,6 +660,10 @@ fieldset.toggle label input[type=checkbox]:after {
   border-radius: 100%;
   background-color: var(--color--border);
   content: "";
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 fieldset.toggle label input[type=checkbox]:checked {
@@ -685,6 +719,9 @@ fieldset.range input[type=range]::-webkit-slider-thumb {
   -moz-appearance: none;
   appearance: none;
   -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 fieldset.range input[type=range]::-moz-range-thumb {
@@ -696,7 +733,10 @@ fieldset.range input[type=range]::-moz-range-thumb {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  -webkit-transition: all 0.25s ease 0s;
   -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -1205,6 +1245,10 @@ html.dark form.color-mode fieldset label input[type=checkbox]:checked:after {
   max-height: 0;
   opacity: 0;
   stroke-width: 2.5;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 .card ul.options li span.status.invalid {
@@ -1439,15 +1483,27 @@ header {
 }
 
 .headroom {
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -ms-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
   will-change: transform;
 }
 
 .headroom--pinned {
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
   transform: translateY(0);
 }
 
 .headroom--unpinned {
+  -webkit-transform: translateY(-100vh);
+  -moz-transform: translateY(-100vh);
+  -ms-transform: translateY(-100vh);
+  -o-transform: translateY(-100vh);
   transform: translateY(-100vh);
 }
 
@@ -1547,13 +1603,25 @@ nav ul li:last-of-type {
   max-width: 0;
   max-height: 0;
   opacity: 0;
+  -webkit-transform: translateX(100vw);
+  -moz-transform: translateX(100vw);
+  -ms-transform: translateX(100vw);
+  -o-transform: translateX(100vw);
   transform: translateX(100vw);
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -ms-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
 }
 .tabs .panels .panel.is-current {
   max-width: 100%;
   max-height: 100%;
   opacity: 1;
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
   transform: translateX(0);
 }
 
@@ -1589,7 +1657,15 @@ nav ul li:last-of-type {
   border-radius: var(--border-radius-sm);
   color: var(--color--text-light);
   background-color: var(--color--bg-dark);
+  -webkit-transform: translateY(100rem);
+  -moz-transform: translateY(100rem);
+  -ms-transform: translateY(100rem);
+  -o-transform: translateY(100rem);
   transform: translateY(100rem);
+  -webkit-transition: transform 0.75s ease 0s;
+  -moz-transition: transform 0.75s ease 0s;
+  -ms-transition: transform 0.75s ease 0s;
+  -o-transition: transform 0.75s ease 0s;
   transition: transform 0.75s ease 0s;
 }
 .toast p {
@@ -1608,6 +1684,10 @@ nav ul li:last-of-type {
   background-color: rgba(255, 255, 255, 0.25);
 }
 .toast.show {
+  -webkit-transform: translateY(-4rem);
+  -moz-transform: translateY(-4rem);
+  -ms-transform: translateY(-4rem);
+  -o-transform: translateY(-4rem);
   transform: translateY(-4rem);
 }
 
@@ -1696,7 +1776,15 @@ details:after {
   background-repeat: no-repeat;
   background-size: contain;
   content: "";
+  -webkit-transform: rotate(0);
+  -moz-transform: rotate(0);
+  -ms-transform: rotate(0);
+  -o-transform: rotate(0);
   transform: rotate(0);
+  -webkit-transition: transform 0.25s ease 0s;
+  -moz-transition: transform 0.25s ease 0s;
+  -ms-transition: transform 0.25s ease 0s;
+  -o-transition: transform 0.25s ease 0s;
   transition: transform 0.25s ease 0s;
 }
 details summary {
@@ -1715,6 +1803,10 @@ details p:last-of-type {
 }
 
 details[open]:after {
+  -webkit-transform: rotate(450deg);
+  -moz-transform: rotate(450deg);
+  -ms-transform: rotate(450deg);
+  -o-transform: rotate(450deg);
   transform: rotate(450deg);
 }
 
@@ -1733,6 +1825,10 @@ details[open]:after {
   top: 0;
   width: auto;
   padding: var(--spacing--16);
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 .drawers .drawer > .card {
@@ -1741,13 +1837,25 @@ details[open]:after {
 }
 .drawers .drawer.right {
   right: 0;
+  -webkit-transform: translateX(100vw);
+  -moz-transform: translateX(100vw);
+  -ms-transform: translateX(100vw);
+  -o-transform: translateX(100vw);
   transform: translateX(100vw);
 }
 .drawers .drawer.left {
   left: 0;
+  -webkit-transform: translateX(-100vw);
+  -moz-transform: translateX(-100vw);
+  -ms-transform: translateX(-100vw);
+  -o-transform: translateX(-100vw);
   transform: translateX(-100vw);
 }
 .drawers .drawer.show {
+  -webkit-transform: translateX(0vw);
+  -moz-transform: translateX(0vw);
+  -ms-transform: translateX(0vw);
+  -o-transform: translateX(0vw);
   transform: translateX(0vw);
 }
 
@@ -1769,6 +1877,10 @@ button[popovertarget].text:hover, button[popovertarget].text:focus {
   border: 0;
   border-radius: var(--border-radius-xs);
   opacity: 0;
+  -webkit-transition: opacity 0.25s ease 0s;
+  -moz-transition: opacity 0.25s ease 0s;
+  -ms-transition: opacity 0.25s ease 0s;
+  -o-transition: opacity 0.25s ease 0s;
   transition: opacity 0.25s ease 0s;
 }
 
@@ -1782,7 +1894,6 @@ a.button {
   display: inline-flex;
   align-items: center;
   position: relative;
-  width: -moz-max-content;
   width: max-content;
   max-width: 100%;
   overflow: hidden;
@@ -1799,6 +1910,10 @@ a.button {
   white-space: nowrap;
   color: var(--color--text-light);
   background-color: var(--color--action-light);
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 button:hover, button:focus,
@@ -2089,8 +2204,7 @@ h4 span.utility .button.tertiary {
 
 ul,
 ol {
-  -moz-column-break-inside: avoid;
-       break-inside: avoid-column;
+  break-inside: avoid-column;
 }
 ul li,
 ol li {
@@ -2106,6 +2220,10 @@ input[type=tel],
 input[type=url],
 select {
   min-height: auto;
+}
+
+.select-icon {
+  top: 1.475rem;
 }
 
 nav.integrations {
@@ -2171,6 +2289,10 @@ details summary {
   line-height: var(--spacing--16);
   color: var(--color--action-light);
   cursor: pointer;
+  -webkit-transition: color 0.25s ease 0s;
+  -moz-transition: color 0.25s ease 0s;
+  -ms-transition: color 0.25s ease 0s;
+  -o-transition: color 0.25s ease 0s;
   transition: color 0.25s ease 0s;
 }
 details summary:hover, details summary:focus {
@@ -2178,6 +2300,10 @@ details summary:hover, details summary:focus {
 }
 details ul {
   max-height: 0;
+  -webkit-transition: max-height 0.5s ease 0s;
+  -moz-transition: max-height 0.5s ease 0s;
+  -ms-transition: max-height 0.5s ease 0s;
+  -o-transition: max-height 0.5s ease 0s;
   transition: max-height 0.5s ease 0s;
 }
 details ul li {
@@ -2193,4 +2319,196 @@ html.dark details summary {
 }
 html.dark details summary:hover, html.dark details summary:focus {
   color: var(--color--action-dark-hover);
+}
+
+.card ul.mapping {
+  position: relative;
+  padding: var(--spacing--4) 0 var(--spacing--20);
+  list-style-type: none;
+}
+.card ul.mapping:after {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--color--border);
+  content: "";
+}
+.card ul.mapping:last-of-type {
+  padding-bottom: 0;
+}
+.card ul.mapping:last-of-type:after {
+  display: none;
+}
+.card ul.mapping li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+  padding: var(--spacing--4) 0;
+}
+.card ul.mapping li:first-of-type {
+  padding: 0;
+  font-size: var(--small);
+  font-weight: 700;
+}
+.card ul.mapping li:first-of-type:after {
+  display: none;
+}
+.card ul.mapping li:first-of-type span.field:after,
+.card ul.mapping li:first-of-type span.element:after {
+  display: none;
+}
+.card ul.mapping li:last-of-type {
+  padding-bottom: 0;
+}
+.card ul.mapping li:last-of-type:after {
+  display: none;
+}
+.card ul.mapping li span {
+  display: flex;
+  position: relative;
+  width: calc(33.3333333333% - var(--spacing--8));
+  overflow: scroll;
+  white-space: nowrap;
+}
+.card ul.mapping li span.field:after,
+.card ul.mapping li span.element:after {
+  display: inline-flex;
+  position: absolute;
+  top: calc(var(--spacing--4) / 2);
+  right: 0;
+  width: var(--spacing--16);
+  height: var(--spacing--16);
+  background-image: url(../../../assets/icons/ui/arrow-right.svg);
+  background-size: contain;
+  content: none;
+}
+
+@media (min-width: 40rem) {
+  .card ul.mapping li span.field,
+  .card ul.mapping li span.element {
+    padding: 0 var(--spacing--20) 0 0;
+  }
+  .card ul.mapping li span.field:after,
+  .card ul.mapping li span.element:after {
+    content: "";
+  }
+}
+.card ul.options li {
+  display: none;
+  max-height: 0;
+  opacity: 0;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s;
+}
+.card ul.options li.show {
+  display: flex;
+  max-height: 100vh;
+  opacity: 1;
+}
+
+.card.entity {
+  display: none;
+  max-height: 0;
+  opacity: 0;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s;
+}
+.card.entity.show {
+  display: inherit;
+  max-height: 100vh;
+  opacity: 1;
+}
+
+.card ul.mapping li {
+  display: none;
+  max-height: 0;
+  opacity: 0;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s;
+}
+.card ul.mapping li.show {
+  display: flex;
+  max-height: 100vh;
+  opacity: 1;
+}
+
+form.mapping-groups .mapping-group {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+  width: 100%;
+  padding: 0 0 var(--spacing--32);
+}
+form.mapping-groups .mapping-group:after {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: var(--spacing--8);
+  width: calc(100% - var(--spacing--16));
+  height: 1px;
+  margin-bottom: var(--spacing--16);
+  background-color: var(--color--border);
+  content: "";
+}
+form.mapping-groups .mapping-group fieldset.toggle {
+  margin-bottom: 0;
+}
+form.mapping-groups .mapping-group .preview {
+  display: flex;
+  flex-direction: column;
+  width: calc(50% - var(--spacing--16));
+  margin: var(--spacing--8);
+  opacity: 1;
+  -webkit-transition: opacity 0.25s ease 0s;
+  -moz-transition: opacity 0.25s ease 0s;
+  -ms-transition: opacity 0.25s ease 0s;
+  -o-transition: opacity 0.25s ease 0s;
+  transition: opacity 0.25s ease 0s;
+}
+form.mapping-groups .mapping-group .preview p {
+  overflow: hidden;
+  padding: 0;
+  line-height: 3rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+form.mapping-groups .mapping-group .preview.dim {
+  opacity: 0.15;
+}
+
+@media (min-width: 40rem) {
+  form.mapping-groups .mapping-group {
+    width: 50%;
+  }
+}
+@media (min-width: 64rem) {
+  form.mapping-groups .mapping-group {
+    width: 33.3333333333%;
+  }
+}
+@media (min-width: 80rem) {
+  form.mapping-groups .mapping-group {
+    width: 25%;
+  }
+}
+@media (min-width: 96rem) {
+  form.mapping-groups .mapping-group {
+    width: 20%;
+  }
 }
