--- a/projects/amen/demos/orchestration-a/template/template.html
+++ b/projects/amen/demos/orchestration-a/template/template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Skunk Works Dashboard | TigerConnect</title>
+  <title>AMEN Skunk Works | TigerConnect</title>
   <base href="../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -33,7 +33,7 @@
   <header>
     <nav>
       <ul>
-        <li>Dashboard</li>
+        <li><a href="demos/orchestration/dashboard/index.html">Dashboard</a></li>
         <li><a href="demos/orchestration/integrations/index.html">Integrations</a></li>
         <li><a href="demos/orchestration/entities/index.html">Entities</a></li>
         <li><a href="demos/orchestration/workflows/index.html">Workflows</a></li>
@@ -43,8 +43,7 @@
   </header>
   <main>
     <article>
-      <h1>Dashboard</h1>
-      
+      <h1></h1>
     </article>
   </main>
   <footer>
